--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.12",
+    "@typescript-eslint/parser": "^2.29.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "dev": "^0.1.3",
@@ -14,14 +15,18 @@
     "mongoose": "^5.9.10",
     "typescript": "^3.8.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "eslint": "^6.8.0"
+  },
   "scripts": {
     "build": "tsc",
     "build-watch": "tsc --watch",
     "start": "node ./dist/app.js",
     "start-watch": "nodemon ./dist/app.js",
     "bs": "npm run build && npm run start",
-    "bs-watch": "(npm run build-watch &) && npm run start-watch"
+    "bs-watch": "(npm run build-watch &) && npm run start-watch",
+    "eslint": "eslint"
   },
   "author": "",
   "license": "ISC",
