--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,10 @@
     "cookie-parser": "^1.4.5",
     "dev": "^0.1.3",
     "express": "^4.17.1",
+    "gulp": "^4.0.2",
+    "gulp-eslint": "^6.0.0",
+    "gulp-nodemon": "^2.5.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
     "mongoose": "^5.9.10",
     "typescript": "^3.8.3"
   },
@@ -20,12 +24,7 @@
     "eslint": "^6.8.0"
   },
   "scripts": {
-    "build": "tsc",
-    "build-watch": "tsc --watch",
-    "start": "node ./dist/app.js",
-    "start-watch": "nodemon ./dist/app.js",
-    "bs": "npm run build && npm run start",
-    "bs-watch": "(npm run build-watch &) && npm run start-watch",
+    "bs-watch": "gulp watch",
     "eslint": "eslint"
   },
   "author": "",
