--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,6 +9,9 @@
       "es2018",
       "dom"
     ],
+    "paths": {
+      "@/*": [ "src/*" ],
+    },
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
