made gulp resolve ts paths and unified empty line at the end of file

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -95,6 +95,7 @@
                 "after": true
             }
         ],
-        "comma-style": "error"
+        "comma-style": "error",
+        "eol-last": "error"
     }
 }
