--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,10 +4,10 @@
     "baseUrl": "./",
     "outDir": "./dist",
     "module": "commonjs",
+    "target": "ES2019",
     "moduleResolution": "node",
     "lib": [
-      "es2018",
-      "dom"
+      "ES2019"
     ],
     "paths": {
       "@/*": [ "./src/*" ], // scisle powiazane z moim pluginem do gulpa. To jest jedyna sciezka, ktora jest obslugiwana
