--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "ng2-dragula": "^2.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "types": "file:../types",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
