--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.6",
-    "@types/mongoose": "^5.7.12",
+    "@types/mongoose": "^5.7.14",
     "@typescript-eslint/parser": "^2.29.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -17,6 +17,7 @@
     "gulp-nodemon": "^2.5.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "mongoose": "^5.9.10",
+    "types": "file:../types",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
