--- a/types/package.json
+++ b/types/package.json
@@ -7,5 +7,8 @@
     "publish": "cd ../frontend && npm i ../types && cd ../backend && npm i ../types"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/mongoose": "^5.7.14"
+  }
 }
