--- a/types/package.json
+++ b/types/package.json
@@ -2,9 +2,11 @@
   "name": "types",
   "version": "1.0.2",
   "description": "",
-  "main": "index.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "publish": "cd ../frontend && npm i ../types && cd ../backend && npm i ../types"
+    "publish": "npm run build && cd ../frontend && npm i ../types && cd ../backend && npm i ../types",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
