--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@types/lodash": "^4.14.150",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "types": "file:../types",
