--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,6 @@
     "@typescript-eslint/parser": "^2.29.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
-    "dev": "^0.1.3",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
     "gulp-eslint": "^6.0.0",
@@ -27,7 +26,7 @@
     "eslint": "^6.8.0"
   },
   "scripts": {
-    "bs-watch": "gulp watch",
+    "start": "gulp",
     "eslint": "eslint"
   },
   "author": "",
