--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
     "@types/lodash": "^4.14.157",
+    "@types/lodash-es": "^4.17.3",
+    "lodash-es": "^4.17.15",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "types": "file:../types",
